--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -99,6 +99,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <TextView
@@ -108,6 +109,7 @@
                 android:layout_weight="1"
                 android:paddingStart="15dp"
                 android:text="1M Likes"
+                android:textSize="16dp"
                 android:textColor="@color/colorPrimary" />
 
             <TextView
@@ -117,6 +119,7 @@
                 android:layout_weight="1"
                 android:text="1M Comments"
                 android:paddingEnd="15dp"
+                android:textSize="16dp"
                 android:textAlignment="textEnd"
                 android:textColor="@color/colorPrimary" />
         </LinearLayout>
