--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity">
 
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
         app:layout_constraintBottom_toTopOf="@+id/register_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.312" />
 
     <EditText
         android:id="@+id/register_name"
@@ -26,7 +28,7 @@
         android:layout_height="59dp"
         android:layout_below="@+id/title"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="85dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_person"
         android:focusable="true"
@@ -39,14 +41,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <EditText
         android:id="@+id/register_email"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="273dp"
         android:layout_height="59dp"
         android:layout_below="@+id/register_button"
-        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_email_icon"
         android:focusable="true"
@@ -78,7 +79,7 @@
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.615" />
+        app:layout_constraintVertical_bias="0.549" />
 
     <EditText
         android:id="@+id/register_repassword"
@@ -98,7 +99,7 @@
         app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.615" />
+        app:layout_constraintVertical_bias="0.547" />
 
     <CheckBox
         android:id="@+id/signupShowPassword"
@@ -126,23 +127,24 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.187"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_password"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.143" />
 
     <TextView
         android:id="@+id/age"
-        android:layout_width="321dp"
-        android:layout_height="46dp"
+        android:layout_width="204dp"
+        android:layout_height="52dp"
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.566"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/invisible"
-        app:layout_constraintVertical_bias="0.015" />
+        app:layout_constraintVertical_bias="0.034" />
 
     <Button
         android:id="@+id/register_button"
@@ -178,7 +180,7 @@
         app:layout_constraintHorizontal_bias="0.258"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.828" />
 
     <TextView
         android:id="@+id/homepage"
@@ -193,10 +195,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.949"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.828" />
 
     <EditText
         android:id="@+id/bio"
@@ -215,7 +217,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.981" />
+        app:layout_constraintVertical_bias="0.94" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="178dp"
+        android:layout_height="40dp"
+        android:prompt="@string/spinner_title"
+        app:layout_constraintBottom_toTopOf="@+id/bio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.697"
+        app:layout_constraintStart_toEndOf="@+id/invisible"
+        app:layout_constraintTop_toBottomOf="@+id/register_repassword"
+        app:layout_constraintVertical_bias="0.451" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
