--- a/app/src/main/res/layout/activity_unknown_user_profile.xml
+++ b/app/src/main/res/layout/activity_unknown_user_profile.xml
@@ -60,10 +60,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:layout_marginLeft="1dp"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="5dp"
+                        android:layout_gravity="start"
                         android:layout_marginTop="15dp"
-                        android:textAlignment="center"
+                        android:textAlignment="textStart"
                         android:textColor="@color/text_gray"
                         android:textSize="25sp" />
 
@@ -71,22 +71,34 @@
                         android:id="@+id/ukemailtv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="1dp"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginTop="10dp"
-                        android:textAlignment="center"
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="textStart"
                         android:textColor="@color/text_gray" />
 
                     <TextView
                         android:id="@+id/ukagetv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="1dp"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/text_gray" />
+
+                    <TextView
+                        android:id="@+id/ukbiotv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginBottom="15dp"
-                        android:textAlignment="center"
+                        android:textAlignment="textStart"
                         android:textColor="@color/text_gray" />
 
                 </LinearLayout>
